--- a/section2/tsconfig.json
+++ b/section2/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
+        "target": "ES5",
+        "module": "CommonJS",
         "outDir": "dist",
         "strict": true,
         // "strictNullChecks": false,
@@ -14,5 +14,4 @@
         "src"
     ],
     "skipLibCheck": true,
-    
 }
